<resources>
    <string name="app_name">Trắc Nghiệm Toán THPT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Trang chủ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chuyenDe">Chuyên đề</string>
    <string name="leoNui">Leo núi</string>
    <string name="exam">Kiểm tra</string>
    <string name="error_connect">Kiểm tra kết nội mạng và thử lại!</string>
    <string name="questionNo">Câu</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="xemDapAn">Xem đáp án chi tiết</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="facebook_app_id">257230331370072</string>
    <string name="share">Chia sẽ</string>
    <string name="reqKT">Vui lòng chọn câu hỏi và thời gian kiểm tra</string>
    <string name="soCauKT">Số Câu Hỏi Kiểm Tra</string>
    <string name="thoiGianLamBai">Thời gian làm bài</string>
    <string name="chonChuDe">Chọn chủ đề</string>
    <string name="lamBai">Làm bài</string>
    <string name="ok">OK</string>
    <string name="cancel">Hủy</string>
    <string name="question">Câu hỏi</string>
    <string name="banChuaChonChuDe">Bạn chưa chọn chủ đề</string>
    <string name="nopBai">Nộp bài</string>
    <string name="yourPoint">Điểm của bạn</string>
    <string name="hetGio">Hết giờ</string>
    <string name="chiTiet">Chi tiết</string>
    <string name="loading">Đang tải, vui lòng đợi trong giây lát</string>
    <string name="loginFB">Đăng nhập Facebook</string>
    <string name="logout">Đăng xuất</string>
    <string name="boDe">Bộ đề</string>
    <string name="user_profile">Thông tin cá nhân</string>
    <string name="email">Email</string>
    <string name="lich_su_lam_bai">Lịch sử làm bài</string>
    <string name="datetime">Thời gian</string>
    <string name="gotoHistory">Xem lịch sử</string>
    <string name="confirm_logout">Bạn có muốn đăng xuất khỏi ứng dụng?</string>
    <string name="point_chart">Biểu đồ điểm</string>
    <string name="so_bai_kt">Số bài kiểm tra đã làm:</string>
    <string name="diem_trung_binh">Điểm trung bình:</string>
    <string name="xep_loai">Xếp loại:</string>
    <string name="good">TỐT</string>
    <string name="rather">KHÁ</string>
    <string name="medium">TRUNG BÌNH</string>
    <string name="weak">YẾU</string>
    <string name="empty_username">Tên đăng nhập không được để trống!</string>
    <string name="empty_password">Mật khẩu không được để trống!</string>
    <string name="register">Đăng ký</string>
    <string name="fullName">Tên đầy đủ</string>
    <string name="repass">Nhập lại mật khẩu</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="empty_fullname">Tên đầy đủ không được để trống!</string>
    <string name="empty_repassword">Nhập lại mật khẩu không được để trống!</string>
    <string name="empty_email">Email không được để trống!</string>
    <string name="password_invalid">Mật khẩu không khớp!</string>
    <string name="tiLeLamBaiDung">Tỷ lệ làm bài đúng</string>
    <string name="confirmQuitExam">Bạn đang làm bài kiểm tra, bạn vẫn muốn thoát?</string>
    <string name="yes">Đồng ý</string>
    <string name="late">Để sau</string>
    <string name="coming_soon">Chức năng đang phát triển</string>
    <string name="shareSucess">Chia sẽ thành công</string>
    <string name="title_activity_test_bottom">TestBottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="newNoti">New</string>
    <string name="needLogin">Bạn cần phải đăng nhập trước!</string>
    <string name="my_own_title">Rate me</string>
    <string name="my_own_message">Nếu thấy ứng dụng này bổ ích, hãy dành bình chọn 5 sao cho nó. Cảm ơn bạn đã sử dụng ứng dụng</string>
    <string name="my_own_rate">Rate now</string>
    <string name="my_own_thanks">No, Thanks</string>
    <string name="my_own_cancel">Late</string>
    <string name="app_name_short">TOÁN THPT</string>
    <string name="tracNghiem">Trắc nghiệm</string>
    <string name="xemLaiDA">Xem lại đáp án</string>
    <string name="dapAn">Đáp án</string>
    <string name="banner_ad_unit_id">ca-app-pub-1264100138002498/5027825368</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1264100138002498/2434285766</string>
    <string name="loginToExam">Bạn cần đăng nhập để tiếp tục sử dụng chức năng này!</string>
    <string name="dapAnChiTiet">Đáp án chi tiết</string>
    <string name="clickback">Nhấn \'back\' lần nữa để thoát</string>
    <string name="completed">Đã hoàn thành</string>
    <string name="detailPoint">Chi tiết điểm</string>
    <string name="minute">Phút</string>
    <string name="soCauDaLam">Số câu đã làm:</string>
</resources>
