<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
        <!--android:id="@+id/nav_home"-->
        <!--android:checked="true"-->
        <!--android:icon="@mipmap/ic_home"-->
        <!--android:title="@string/home" />-->
        <item
            android:id="@+id/nav_chuyenDe"
            android:checked="true"
            android:icon="@mipmap/ic_ontap"
            android:title="@string/chuyenDe" />
        <item
            android:id="@+id/nav_boDe"
            android:icon="@mipmap/ic_ontap"
            android:title="@string/boDe" />
        <item
            android:id="@+id/nav_kiemTra"
            android:icon="@mipmap/ic_exam"
            android:title="@string/exam" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_mountain"
            android:title="@string/leoNui" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/logout" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
