<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.app.maththpt.viewmodel.RegisterViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.app.maththpt.activity.RegisterActivity">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="@{registerViewModel.title}" />

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center_horizontal"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_size_30sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{registerViewModel.watcherUserName}"
                        android:inputType="text"
                        android:text="@{registerViewModel.user.username}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fullName"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{registerViewModel.watcherFullName}"
                        android:inputType="text"
                        android:text="@{registerViewModel.user.fullname}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{registerViewModel.watcherEmail}"
                        android:inputType="textEmailAddress"
                        android:text="@{registerViewModel.user.email}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{registerViewModel.watcherPassword}"
                        android:inputType="textPassword"
                        android:text="@{registerViewModel.user.password}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repass"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:addTextChangedListener="@{registerViewModel.watcherRepassword}"
                        android:inputType="textPassword"
                        android:text="@{registerViewModel.repass}" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@drawable/bg_button_primary"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>
