<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="beforeExamViewModel"
            type="com.app.maththpt.viewmodel.BeforeExamViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_16dp"
        tools:context="com.app.maththpt.fragment.BeforeExamFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lnSoCau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soCauKT"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSoCau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{beforeExamViewModel.number}"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorGray" />

            <LinearLayout
                android:id="@+id/lnThoiGian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thoiGianLamBai"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvThoiGian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{beforeExamViewModel.time}"
                    android:textSize="@dimen/text_size_14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chonChuDe"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

            <com.app.maththpt.widget.DisableScrollRecyclerView
                android:id="@+id/rvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLamBai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@drawable/bg_button_primary"
                android:text="@string/lamBai"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

    </ScrollView>

</layout>
