<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userProfileViewModel"
            type="com.app.maththpt.viewmodel.UserProfileViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.maththpt.activity.UserProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="@{userProfileViewModel.title}" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.app.maththpt.widget.ResizableImageViewByWidth
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/bg_profile" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:id="@+id/imgAvatar"
                            android:layout_width="@dimen/image_size_100dp"
                            android:layout_height="@dimen/image_size_100dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/ic_avatar"
                            app:civ_border_color="#EEEEEE"
                            app:civ_border_width="2dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/margin_5dp"
                            android:text="@{userProfileViewModel.userNameProfile}"
                            android:textSize="@dimen/text_size_15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:maxLines="1"
                            android:text="@{userProfileViewModel.emailProfile}"
                            android:textSize="@dimen/text_size_12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/point_chart"
                        android:textSize="@dimen/text_size_14sp"
                        android:textStyle="bold" />


                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chartPoint"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_size_200dp"
                        android:layout_marginBottom="@dimen/margin_10dp"
                        android:layout_marginTop="@dimen/margin_10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/so_bai_kt"
                            android:textSize="@dimen/text_size_14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@{userProfileViewModel.countPoint}"
                            android:textSize="@dimen/text_size_14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/diem_trung_binh"
                            android:textSize="@dimen/text_size_14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@{userProfileViewModel.averagePoint}"
                            android:textSize="@dimen/text_size_14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/xep_loai"
                            android:textSize="@dimen/text_size_14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@{userProfileViewModel.classification}"
                            android:textSize="@dimen/text_size_14sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/margin_5dp"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:background="@color/colorGray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tiLeLamBaiDung"
                        android:textSize="@dimen/text_size_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textSize="@dimen/text_size_14sp"
                        android:visibility="@{userProfileViewModel.visiableError}" />

                    <com.app.maththpt.widget.DisableScrollRecyclerView
                        android:id="@+id/rvStatisticalPoint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5dp" />

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:id="@+id/chartStatistical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_size_200dp"
                        android:background="@android:color/white" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
